Start brag-cards

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -8,6 +8,7 @@
 
 @import 'generic/lists';
 
+@import 'partials/brag-card';
 @import 'partials/carousel-header';
 @import 'partials/navigation';
 @import 'partials/footer';
