Add FAQ renderer and update brag card CSS

--- a/_layouts/brag-card.html
+++ b/_layouts/brag-card.html
@@ -1,8 +1,8 @@
-<article class="brag-card row">
-    <div class="col-sm-3 picture">
+<article class="brag-card clearfix">
+    <div class="picture">
         <img src="{{ page.image }}" alt="{{ page.name }}'s picture'" />
     </div>
-    <div class="col-sm-9 description">
+    <div class="description">
         <p class="name">{{ page.name }}</p>
         <p class="year">Alumn from {{ page.year }}</p>
         <section class="bio">
