--- a/_sass/partials/_brag-card.scss
+++ b/_sass/partials/_brag-card.scss
@@ -1,7 +1,25 @@
 .brag-card {
     .picture {
+        float: left;
+        padding-right: 15px;
+
         img {
             border-radius: 50%;
+        }
+    }
+
+    .description {
+        overflow: hidden;
+
+        .name {
+            font-size: 20px;
+            font-weight: bold;
+            margin-bottom: 0;
+        }
+
+        .year {
+            font-size: 14px;
+            font-style: italic;
         }
     }
 }
