--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,6 +7,7 @@
 @import 'partials/cursor';
 
 @import 'generic/lists';
+@import 'bootstrap/panel-heading';
 
 @import 'partials/brag-card';
 @import 'partials/carousel-header';
