--- a/_includes/navigation.html
+++ b/_includes/navigation.html
@@ -1,20 +1,20 @@
 <nav class="navbar navbar-opaque-dark">
     <div class="container">
         <div class="navbar-header">
-            <a class="navbar-brand" href="{{ site.baseurl | prepend: "/" }}">Youth Tech Program</a>
-        </div>
-
-        <div class="navbar-collapse collapse in" id="site-navbar">
-            <ul class="nav navbar-nav navbar-right">
-                {% include partials/pages.html %}
-            </ul>
-
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#site-navbar" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
+
+            <a class="navbar-brand" href="{{ site.baseurl | prepend: "/" }}">Youth Tech Program</a>
+        </div>
+
+        <div class="navbar-collapse collapse" id="site-navbar">
+            <ul class="nav navbar-nav navbar-right">
+                {% include partials/pages.html %}
+            </ul>
         </div>
     </div>
 </nav>
