Small updates to the FAQ rendering

--- a/_includes/modules/faq-renderer.html
+++ b/_includes/modules/faq-renderer.html
@@ -10,7 +10,7 @@
             {% capture questionID %}question-{{ accordionNumber }}-{{ questionNumber }}{% endcapture %}
             {% capture answerID %}answer-{{ accordionNumber }}-{{ questionNumber }}{% endcapture %}
 
-            <div class="panel panel-default">
+            <div class="panel panel-faq">
                 <div class="panel-heading clickable" role="tab" id="{{ questionID }}">
                     <h4 class="panel-title">
                         <a class="collapsed" role="button" data-toggle="collapse" data-parent="#{{ accordionTitle }}" href="#{{ answerID }}" aria-expanded="false" aria-controls="{{ answerID }}">
