--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,6 +10,7 @@
 
 @import 'partials/brag-card';
 @import 'partials/carousel-header';
+@import 'partials/faq-panel';
 @import 'partials/navigation';
 @import 'partials/footer';
 
