--- a/_sass/partials/_carousel-header.scss
+++ b/_sass/partials/_carousel-header.scss
@@ -27,8 +27,9 @@
         }
 
         h1, h2, h3,
-        h4, h5, h6 {
-            text-shadow: 0 1px 10px rgba(0, 0, 0, 0.5), 0 0 30px rgba(0, 0, 0, 0.9);
+        h4, h5, h6,
+        p, span {
+            text-shadow: 0 1px 10px #000, 0 0 30px #000;
         }
     }
 }
