--- a/_sass/partials/_navigation.scss
+++ b/_sass/partials/_navigation.scss
@@ -42,3 +42,16 @@
         }
     }
 }
+
+@include respond-to(sm) {
+    .navbar-remaining {
+        float: inherit;
+        overflow: hidden;
+        text-align: center;
+
+        li {
+            display: inline-block;
+            float: initial;
+        }
+    }
+}
