Restructure the homepage

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -12,6 +12,11 @@
 @import 'partials/carousel-header';
 @import 'partials/faq-panel';
 @import 'partials/navigation';
+@import 'partials/page-sections';
+@import 'partials/photo';
 @import 'partials/footer';
+
+@import 'sections/program-overview';
+@import 'sections/upcoming-events';
 
 @import 'partials/cursor';
