Add color scheme and make use of it

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -1,5 +1,8 @@
-$ytp-primary: #247cb4;
-$ytp-secondary: #e79e49;
+$ytp-primary: #46A5E6;
+$ytp-secondary: #A1C435;
+$ytp-dark: #182944;
+$ytp-light: #ECECF3;
+$ytp-alt: #FBF6CE;
 
 $color-bg: #ffffff;
 $color-alt-bg: #efefef;
@@ -8,4 +11,4 @@ $color-black: #000000;
 $color-white: #ffffff;
 
 $spacing-vertical: 30px;
-$spacing-vertical-small: $spacing-vertical / 2;
+$spacing-vertical-small: 15px;
