Update upcoming events section

--- a/_sass/partials/_page-sections.scss
+++ b/_sass/partials/_page-sections.scss
@@ -1,7 +1,9 @@
 .page-section {
+    $height: $spacing-vertical;
+
     padding: {
-        bottom: 30px;
-        top: 30px;
+        bottom: $height;
+        top: $height;
     }
 }
 
