--- a/_sass/partials/_photo.scss
+++ b/_sass/partials/_photo.scss
@@ -1,8 +1,8 @@
 .photo {
-    border: 2px solid #838383;
+    border: 1px solid #B2B2B2;
 
     img {
-        border: 10px solid #ffffff;
+        border: 10px solid $color-white;
         max-width: 100%;
     }
 }
