--- a/_sass/partials/_carousel.scss
+++ b/_sass/partials/_carousel.scss
@@ -33,3 +33,19 @@
         }
     }
 }
+
+.carousel {
+    &.transparent {
+        .carousel-control {
+            background: transparent;
+            color: black;
+            text-shadow: none;
+
+            i {
+                position: absolute;
+                left: 45%;
+                top: 47%;
+            }
+        }
+    }
+}
