--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -10,7 +10,7 @@
 
 @import 'partials/blackboard';
 @import 'partials/brag-card';
-@import 'partials/carousel-header';
+@import 'partials/carousel';
 @import 'partials/faq-panel';
 @import 'partials/navigation';
 @import 'partials/page-sections';
@@ -19,5 +19,6 @@
 
 @import 'sections/program-overview';
 @import 'sections/upcoming-events';
+@import 'sections/program-stats';
 
 @import 'partials/cursor';
