Previous teams section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -20,5 +20,6 @@
 @import 'sections/program-overview';
 @import 'sections/upcoming-events';
 @import 'sections/program-stats';
+@import 'sections/past-companies';
 
 @import 'partials/cursor';
