--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,5 +21,6 @@
 @import 'sections/upcoming-events';
 @import 'sections/program-stats';
 @import 'sections/past-companies';
+@import 'sections/program-staff';
 
 @import 'partials/cursor';
