Style and write quotes section

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -22,5 +22,6 @@
 @import 'sections/program-stats';
 @import 'sections/past-companies';
 @import 'sections/program-staff';
+@import 'sections/quotes-section';
 
 @import 'partials/cursor';
