--- a/_includes/handlebars/quote-card.html
+++ b/_includes/handlebars/quote-card.html
@@ -1,16 +1,18 @@
 {% raw %}
     <script id="quote-card-template" type="text/x-handlebars-template">
-        <article class="brag-card clearfix">
-            <div class="picture">
-                <img src="{{ image }}" alt="{{ name }}'s picture'" />
-            </div>
-            <div class="description">
-                <p class="name">{{ name }}</p>
-                <p class="year">Alumn from {{ year }}</p>
-                <section class="bio">
-                    {{ content }}
-                </section>
-            </div>
-        </article>
+        {{#each quotes}}
+            <article class="brag-card clearfix quote">
+                <div class="picture">
+                    <img src="{{ site.baseurl }}/assets/images/alumni/{{image}}" alt="{{name}}'s picture" />
+                </div>
+                <div class="description">
+                    <p class="name">{{name}}</p>
+                    <p class="year">{{title}} of {{company}}, {{year}}</p>
+                    <section class="bio">
+                        {{{content}}}
+                    </section>
+                </div>
+            </article>
+        {{/each}}
     </script>
 {% endraw %}
