Fix quotes when a baseURL exists

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -16,6 +16,10 @@
         {% endif %}
     {% endfor %}
 
+    <script>
+        var baseurl = "{{ site.baseurl }}";
+    </script>
+
     {% for script in site.resources.js %}
         {% if script contains "//" %}
             <script src="{{ script }}"></script>
