--- a/_includes/handlebars/quote-card.html
+++ b/_includes/handlebars/quote-card.html
@@ -3,7 +3,7 @@
         {{#each quotes}}
             <article class="brag-card clearfix quote sortable">
                 <div class="picture">
-                    <img src="{{ site.baseurl }}/assets/images/alumni/{{image}}" alt="{{name}}'s picture" />
+                    <img src="{{image}}" alt="{{name}}'s picture" />
                 </div>
                 <div class="description">
                     <p class="name">{{name}}</p>
