Update program overview images

--- a/_sass/sections/_program-overview.scss
+++ b/_sass/sections/_program-overview.scss
@@ -6,7 +6,7 @@
             img {
                 border-radius: 50%;
                 margin-bottom: 10px;
-                max-width: 100%;
+                width: 100px;
             }
 
             &.top-1 {
