Restructure some Sass to be reusable

--- a/_includes/handlebars/quote-card.html
+++ b/_includes/handlebars/quote-card.html
@@ -1,7 +1,7 @@
 {% raw %}
     <script id="quote-card-template" type="text/x-handlebars-template">
         {{#each quotes}}
-            <article class="brag-card clearfix quote sortable">
+            <article class="brag-card clearfix quote table-cell sortable">
                 <div class="picture">
                     <img src="{{image}}" alt="{{name}}'s picture" />
                 </div>
