--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -5,14 +5,15 @@
 @import 'base';
 @import 'bootstrap/breakpoints';
 @import 'bootstrap/panel-heading';
+@import 'bootstrap/carousel';
+@import 'bootstrap/navigation';
 
 @import 'generic/lists';
 
 @import 'partials/blackboard';
 @import 'partials/brag-card';
-@import 'partials/carousel';
+@import 'partials/css-table';
 @import 'partials/faq-panel';
-@import 'partials/navigation';
 @import 'partials/page-sections';
 @import 'partials/photo';
 @import 'partials/footer';
