--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -14,6 +14,7 @@
 @import 'partials/brag-card';
 @import 'partials/css-table';
 @import 'partials/faq-panel';
+@import 'partials/image-floater';
 @import 'partials/page-sections';
 @import 'partials/photo';
 @import 'partials/footer';
@@ -24,5 +25,6 @@
 @import 'sections/past-companies';
 @import 'sections/program-staff';
 @import 'sections/quotes-section';
+@import 'sections/program-awards';
 
 @import 'partials/cursor';
