Disable nav bar, add city logo, fix mobile quirks

--- a/_layouts/jumbotron-header.html
+++ b/_layouts/jumbotron-header.html
@@ -3,7 +3,7 @@ layout: base
 ---
 
 <header class="header-carousel">
-    {% include navigation.html %}
+    {% comment %}{% include navigation.html %}{% endcomment %}
     {% include modules/jumbotron-carousel.html jumbotron=page.jumbotron %}
 </header>
 
