--- a/_sass/sections/_past-companies.scss
+++ b/_sass/sections/_past-companies.scss
@@ -5,7 +5,7 @@
         .subsidiary {
             display: inline-block;
             margin-bottom: $spacing-vertical-small;
-            padding: 0 $spacing-vertical;
+            padding: 0 10px;
             text-align: center;
 
             img {
@@ -19,6 +19,10 @@
 
             p {
                 font-weight: bold;
+            }
+
+            @include respond-to(sm) {
+                padding: 0 $spacing-vertical;
             }
         }
     }
