--- a/_sass/sections/_program-overview.scss
+++ b/_sass/sections/_program-overview.scss
@@ -9,16 +9,38 @@
                 width: 100px;
             }
 
-            &.top-1 {
 
-            }
+            .po-icon {
+                background-size: cover;
+                content: '';
+                height: 100px;
+                margin: 0 auto;
+                width: 100px;
 
-            &.top-2 {
-                margin-top: 80px;
-            }
+                &.collaboration {
+                    background-image: url('../images/icons/Chat.png');
 
-            &.top-3 {
-                margin-top: 30px;
+                    &:hover {
+                        background-image: url('../images/icons/Chat-Active.png');
+                    }
+                }
+
+                &.leadership {
+                    background-image: url('../images/icons/Rocket.png');
+
+                    &:hover {
+                        background-image: url('../images/icons/Rocket-Active.png');
+                    }
+                }
+
+                &.thinking {
+                    background-image: url('../images/icons/Gears.png');
+
+                    &:hover {
+                        background-image: url('../images/icons/Gears-Active.png');
+                    }
+                    width: 110px;
+                }
             }
         }
     }
