--- a/_sass/sections/_past-companies.scss
+++ b/_sass/sections/_past-companies.scss
@@ -1,5 +1,6 @@
 .past-companies {
     .holding-company {
+        margin-bottom: -1 * $spacing-vertical-small; // Cancel out the last row of margin
         text-align: center;
 
         .subsidiary {
