--- a/_sass/sections/_past-companies.scss
+++ b/_sass/sections/_past-companies.scss
@@ -23,7 +23,11 @@
             }
 
             @include respond-to(sm) {
-                padding: 0 $spacing-vertical;
+                padding: 0 30px;
+            }
+
+            @include respond-to(md) {
+                padding: 20px 40px;
             }
         }
     }
