--- a/_sass/sections/_program-stats.scss
+++ b/_sass/sections/_program-stats.scss
@@ -1,9 +1,15 @@
+$controlWidth: 5%;
+
 .program-statistics {
     .carousel {
+        .carousel-control {
+            width: $controlWidth;
+        }
+
         .row {
             padding: {
-                left: 15%;
-                right: 15%;
+                left: $controlWidth;
+                right: $controlWidth;
             }
         }
     }
